# todo-cli-tool-py

.devcontainer/: devcontainer.json
todo-cli/: pyproject.toml
todo-cli/todo_cli/: __main__.py
todo_cli/: __main__.py
todo_cli/modules/: parser.py  todo_app.py
