[project]
name = "todo-cli"
version = "0.1.0"
description = ""
authors = [
    {name = "yamaa",email = "yamaa.com987654321@outlook.jp"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jsonargparse (>=4.37.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
